# Vectorless-RAG

./: .env.example  .gitignore  Makefile  README.md  TODO.md  pyproject.toml  pytest.ini
docker/: Dockerfile  docker-compose.yml
docs/: api.md
src/vectorless_rag/: __init__.py  cli.py  config.py  logger.py
src/vectorless_rag/api/: __init__.py  dependencies.py  main.py  routes.py
src/vectorless_rag/core/: clients.py  tree.py
src/vectorless_rag/generation/: answer.py
src/vectorless_rag/retrieval/: nodes.py  search.py
tests/: conftest.py
tests/unit/: test_generation.py  test_retrieval.py
