[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectorless-rag"
dynamic = ["version"]
description = "Production-grade Vectorless RAG with PageIndex"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "BLACKBOXAI", email = "ai@blackbox.ai"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pageindex>=0.1.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "structlog>=24.0.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "types-all>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "tenacity>=8.0.0",
    "structlog>=24.0.0",
]

[project.scripts]
vectorless-rag = "vectorless_rag.cli:main"


[project.scripts]
vectorless-rag = "vectorless_rag.cli:main"

[project.urls]
Homepage = "https://github.com/blackboxai/Vectorless-RAG"
Repository = "https://github.com/blackboxai/Vectorless-RAG"
Documentation = "https://vectorless-rag.readthedocs.io"
"Issue Tracker" = "https://github.com/blackboxai/Vectorless-RAG/issues"

[tool.hatch.version]
path = "src/vectorless_rag/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vectorless_rag"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --cov=vectorless_rag --cov-report=term-missing --cov-report=html"

